completes about page design

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
 
@@ -9,7 +9,7 @@
         /* font-family: "Nunito", sans-serif; */
         @apply font-Nunito;
         @apply text-black;
-        @apply bg-white;
+        @apply bg-app-white;
     }
 
     h1 {
@@ -26,9 +26,9 @@
         &::after {
             display: block;
             content: "";
-            margin-top: -0.2rem;
-            width: 110%;
-            margin-left: -5%;
+            margin-top: -0.4rem;
+            width: 100%;
+            // margin-left: -5%;
             height: 0.2rem;
             @apply bg-green;
         }
