--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,6 +61,8 @@ a.active {
 .blogPost {
     p {
         @apply t-my-4;
+        @apply t-whitespace-pre-wrap;
+        @apply t-break-words;
     }
 
     img {
